<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddPlantActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="14dp"
        android:background="@color/mindaro">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Add Plant"
            android:textColor="@color/charcoal"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plantForm"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAP"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/deviceImageRv"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/plantNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="Plant name: "
            android:textColor="@color/turquoise"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deviceImageRv" />


        <EditText
            android:id="@+id/plantNameRv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/silver"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/silver"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/plantNameTitle"
            app:layout_constraintStart_toEndOf="@+id/plantNameTitle"
            app:layout_constraintTop_toBottomOf="@+id/deviceImageRv" />


        <TextView
            android:id="@+id/plantTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="14dp"
            android:text="Plant type: "
            android:textColor="@color/turquoise"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantNameTitle" />

        <EditText
            android:id="@+id/plantType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/silver"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/silver"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/plantTypeTitle"
            app:layout_constraintStart_toEndOf="@+id/plantTypeTitle"
            app:layout_constraintStart_toStartOf="@+id/plantNameRv"
            app:layout_constraintTop_toTopOf="@+id/plantTypeTitle"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="14dp"
            android:text="Plant location: "
            android:textColor="@color/turquoise"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantTypeTitle" />

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/silver"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/silver"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/locationTitle"
            app:layout_constraintStart_toEndOf="@+id/locationTitle"
            app:layout_constraintStart_toStartOf="@+id/plantType"
            app:layout_constraintTop_toTopOf="@+id/locationTitle"
            app:layout_constraintVertical_bias="0.80" />

        <TextView
            android:id="@+id/waterFrequencyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="14dp"
            android:text="Water frequency:"
            android:textColor="@color/turquoise"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTitle" />

        <EditText
            android:id="@+id/waterFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/silver"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/silver"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/waterFrequencyTitle"
            app:layout_constraintStart_toEndOf="@+id/waterFrequencyTitle"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/waterFrequencyTitle"
            app:layout_constraintVertical_bias="0.80" />

        <TextView
            android:id="@+id/setLastWatered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="14dp"
            android:text="Last watered:"
            android:textColor="@color/turquoise"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/waterFrequencyTitle" />


        <TextView
            android:id="@+id/lastWateredDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/silver"
            android:onClick="openDatePicker"
            android:textColor="@color/silver"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/setLastWatered"
            app:layout_constraintStart_toEndOf="@id/setLastWatered"
            app:layout_constraintStart_toStartOf="@+id/waterFrequency"
            app:layout_constraintTop_toTopOf="@+id/setLastWatered"
            app:layout_constraintVertical_bias="0.80" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/mindaro"
            android:text="save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/turquoise"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_nav"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>