...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarPlantList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rv_plants"
        android:padding="14dp"
        android:background="@color/mindaro">


        <TextView
            android:id="@+id/myPlantsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
